[gd_scene load_steps=97 format=3 uid="uid://bqdw2t26crriy"]

[ext_resource type="Script" path="res://scene/mob/boo.gd" id="1_vsx00"]
[ext_resource type="Texture2D" uid="uid://be6dql0klmed1" path="res://assets/environment/scifi/anims/boo_dying.png" id="3_l5y3i"]
[ext_resource type="Texture2D" uid="uid://ck3j54bsscgqy" path="res://assets/environment/scifi/anims/boo_idle.png" id="8_1yxea"]
[ext_resource type="Texture2D" uid="uid://cbdtupnqg0bnq" path="res://assets/environment/scifi/anims/scifi_alien_run_1.png" id="9_1w2rc"]
[ext_resource type="Texture2D" uid="uid://dp8jhej0p6s3y" path="res://assets/environment/scifi/anims/scifi_alien_run_2.png" id="10_b5ltv"]
[ext_resource type="Texture2D" uid="uid://3xcl57pew356" path="res://assets/environment/scifi/anims/scifi_alien_run_3.png" id="11_dxeg6"]
[ext_resource type="Texture2D" uid="uid://dc64a1cspkdkp" path="res://assets/environment/scifi/anims/scifi_alien_run_4.png" id="12_eqfbh"]
[ext_resource type="Texture2D" uid="uid://yo30a3bmye2k" path="res://assets/environment/scifi/anims/scifi_alien_run_5.png" id="13_coqyq"]
[ext_resource type="Texture2D" uid="uid://ddkbmqrrj2ty5" path="res://assets/environment/scifi/anims/scifi_alien_bite_1.png" id="14_rlgam"]
[ext_resource type="Texture2D" uid="uid://b1htc2nthsbsm" path="res://assets/environment/scifi/anims/scifi_alien_bite_2.png" id="15_y2emt"]
[ext_resource type="Texture2D" uid="uid://bd32bs3pmr1tk" path="res://assets/environment/scifi/anims/scifi_alien_bite_3.png" id="16_cimsd"]
[ext_resource type="Texture2D" uid="uid://b36owicapyp61" path="res://assets/environment/scifi/anims/scifi_alien_bite_4.png" id="17_wfr7t"]
[ext_resource type="Texture2D" uid="uid://cn2vtm64igjwo" path="res://assets/environment/scifi/anims/scifi_alien_bite_5.png" id="18_hdcbn"]
[ext_resource type="Script" path="res://scene/mob/hp_hitbox.gd" id="18_p7arf"]
[ext_resource type="Texture2D" uid="uid://bfbenxtnvfekt" path="res://assets/environment/scifi/anims/boo_freezing.png" id="19_wvjv3"]
[ext_resource type="Texture2D" uid="uid://dqxjfugpy5d87" path="res://assets/environment/Smoke/FX001/shroomclockDoT.png" id="21_ki5do"]
[ext_resource type="Texture2D" uid="uid://dvw5knlraqpol" path="res://assets/environment/scifi/anims/frozen_boo.png" id="22_4telc"]
[ext_resource type="Script" path="res://scene/mob/booStateMachine.gd" id="22_bgcox"]
[ext_resource type="Texture2D" uid="uid://j76kbvymmq5w" path="res://assets/gui/pixelUIart/enemyhpempty.png" id="23_ekl8e"]
[ext_resource type="Texture2D" uid="uid://d1yngtsqkiofb" path="res://assets/environment/scifi/anims/boo_angry.png" id="23_rku1u"]
[ext_resource type="Texture2D" uid="uid://dkgn6a61bmodd" path="res://assets/gui/pixelUIart/enemyhpfull.png" id="24_w53mp"]
[ext_resource type="Texture2D" uid="uid://dbdb7lcximmt3" path="res://assets/environment/scifi/anims/CIA_Coin.png" id="25_1v0cb"]
[ext_resource type="Texture2D" uid="uid://33derdmhojkb" path="res://assets/gui/pixelUIart/enemymischieffull.png" id="25_i32xu"]
[ext_resource type="Script" path="res://script/statemachine.gd" id="27_emsoi"]
[ext_resource type="Script" path="res://scene/mob/Label.gd" id="29_vvbvf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a3e81"]
size = Vector2(31, 40.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8mdso"]
size = Vector2(12, 15)

[sub_resource type="Shader" id="Shader_kbafe"]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform vec4 origin:source_color;
uniform vec4 new:source_color;
uniform bool enable_sil = false;
//silhouette
uniform vec4 modulate: source_color;
//solhouette

void fragment() {
	

vec4 current_pixel = texture(TEXTURE, UV);
vec4 modulated = COLOR - current_pixel;
		
		//sil
if (enable_sil) {
	COLOR = vec4(modulate.rgb, texture(TEXTURE, UV).a * modulate.a) + modulated;
} else {
	if ((distance(current_pixel, origin) < 0.1))
		COLOR = new;
	else
		COLOR = current_pixel + modulated;
}
	//sil
		
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fthgl"]
resource_local_to_scene = true
shader = SubResource("Shader_kbafe")
shader_parameter/origin = Color(0.843137, 0.482353, 0.729412, 1)
shader_parameter/new = Color(0.764706, 0.458824, 0.666667, 1)
shader_parameter/enable_sil = false
shader_parameter/modulate = Color(2, 2, 2, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfsnx"]
atlas = ExtResource("3_l5y3i")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3wos"]
atlas = ExtResource("3_l5y3i")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrdok"]
atlas = ExtResource("3_l5y3i")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsyq1"]
atlas = ExtResource("3_l5y3i")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5dl7"]
atlas = ExtResource("8_1yxea")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x344c"]
atlas = ExtResource("8_1yxea")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph4gg"]
atlas = ExtResource("8_1yxea")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwbid"]
atlas = ExtResource("8_1yxea")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a8iq"]
atlas = ExtResource("8_1yxea")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c63t8"]
atlas = ExtResource("8_1yxea")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_sa5qw"]
atlas = ExtResource("8_1yxea")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qj4gj"]
atlas = ExtResource("8_1yxea")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpgi1"]
atlas = ExtResource("19_wvjv3")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqojr"]
atlas = ExtResource("19_wvjv3")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmwt2"]
atlas = ExtResource("19_wvjv3")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_yijk1"]
atlas = ExtResource("19_wvjv3")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcvgm"]
atlas = ExtResource("8_1yxea")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mse2q"]
atlas = ExtResource("8_1yxea")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0jdp"]
atlas = ExtResource("8_1yxea")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1gnn"]
atlas = ExtResource("8_1yxea")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4737"]
atlas = ExtResource("8_1yxea")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm2dv"]
atlas = ExtResource("8_1yxea")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_84sv7"]
atlas = ExtResource("8_1yxea")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xq8y"]
atlas = ExtResource("8_1yxea")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqy7j"]
atlas = ExtResource("22_4telc")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho7oj"]
atlas = ExtResource("22_4telc")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq1wb"]
atlas = ExtResource("22_4telc")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmiht"]
atlas = ExtResource("22_4telc")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiafk"]
atlas = ExtResource("22_4telc")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi2bs"]
atlas = ExtResource("22_4telc")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0s27"]
atlas = ExtResource("22_4telc")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_07fv3"]
atlas = ExtResource("22_4telc")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vsns"]
atlas = ExtResource("22_4telc")
region = Rect2(640, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0dmc"]
atlas = ExtResource("22_4telc")
region = Rect2(720, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqv2d"]
atlas = ExtResource("22_4telc")
region = Rect2(800, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oer21"]
atlas = ExtResource("22_4telc")
region = Rect2(880, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8j1y"]
atlas = ExtResource("22_4telc")
region = Rect2(960, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7ogt"]
atlas = ExtResource("22_4telc")
region = Rect2(1040, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf3pk"]
atlas = ExtResource("22_4telc")
region = Rect2(1120, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjslc"]
atlas = ExtResource("22_4telc")
region = Rect2(1200, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_27t28"]
atlas = ExtResource("22_4telc")
region = Rect2(1280, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_t407y"]
atlas = ExtResource("22_4telc")
region = Rect2(1360, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hqda"]
atlas = ExtResource("22_4telc")
region = Rect2(1440, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5uhr"]
atlas = ExtResource("22_4telc")
region = Rect2(1520, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv0g4"]
atlas = ExtResource("23_rku1u")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_27xu0"]
atlas = ExtResource("23_rku1u")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_62fob"]
atlas = ExtResource("23_rku1u")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3at1"]
atlas = ExtResource("23_rku1u")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltcpd"]
atlas = ExtResource("23_rku1u")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgr44"]
atlas = ExtResource("23_rku1u")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq65m"]
atlas = ExtResource("23_rku1u")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp0yf"]
atlas = ExtResource("23_rku1u")
region = Rect2(560, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_an24v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfsnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3wos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrdok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsyq1")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5dl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x344c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph4gg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwbid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a8iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c63t8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sa5qw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qj4gj")
}],
"loop": true,
"name": &"Idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_1w2rc")
}, {
"duration": 1.0,
"texture": ExtResource("10_b5ltv")
}, {
"duration": 1.0,
"texture": ExtResource("11_dxeg6")
}, {
"duration": 1.0,
"texture": ExtResource("12_eqfbh")
}, {
"duration": 1.0,
"texture": ExtResource("13_coqyq")
}],
"loop": true,
"name": &"Jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_rlgam")
}, {
"duration": 1.0,
"texture": ExtResource("15_y2emt")
}, {
"duration": 1.0,
"texture": ExtResource("16_cimsd")
}, {
"duration": 1.0,
"texture": ExtResource("17_wfr7t")
}, {
"duration": 1.0,
"texture": ExtResource("18_hdcbn")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsyq1")
}],
"loop": true,
"name": &"dead",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpgi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqojr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmwt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yijk1")
}],
"loop": false,
"name": &"frozen",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcvgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mse2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0jdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1gnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4737")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pm2dv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84sv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xq8y")
}],
"loop": true,
"name": &"happy",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqy7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho7oj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq1wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmiht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiafk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi2bs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0s27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07fv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vsns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0dmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqv2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oer21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8j1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7ogt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf3pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjslc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27t28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t407y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hqda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5uhr")
}],
"loop": true,
"name": &"ice_block",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv0g4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27xu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62fob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3at1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltcpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgr44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq65m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp0yf")
}],
"loop": true,
"name": &"idle_angry",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_afgcd"]
radius = 313.014

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rxkvq"]
size = Vector2(60, 57)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_572kn"]
size = Vector2(34, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hkjs8"]
size = Vector2(43, 9.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_oei5o"]
atlas = ExtResource("25_1v0cb")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_egnxt"]
atlas = ExtResource("25_1v0cb")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_y41xy"]
atlas = ExtResource("25_1v0cb")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwgfn"]
atlas = ExtResource("25_1v0cb")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbhww"]
atlas = ExtResource("25_1v0cb")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ir8m"]
atlas = ExtResource("25_1v0cb")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mp6j"]
atlas = ExtResource("25_1v0cb")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujnxc"]
atlas = ExtResource("25_1v0cb")
region = Rect2(560, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_1o84e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oei5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egnxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y41xy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwgfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbhww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ir8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mp6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujnxc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="GDScript" id="GDScript_nxsfw"]
script/source = "extends Label


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta):
	text = str(Game.playergold)
"

[node name="boo" type="CharacterBody2D" groups=["ghost", "mob"]]
modulate = Color(1, 1, 1, 0.7)
collision_layer = 64
collision_mask = 11
motion_mode = 1
script = ExtResource("1_vsx00")
metadata/_edit_horizontal_guides_ = [-64.0, 10.0, -33.0]
metadata/_edit_vertical_guides_ = [-50.0, -33.0, -32.0, -93.0]

[node name="alive_shape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_a3e81")

[node name="dead_shape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_8mdso")
disabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.498039)
material = SubResource("ShaderMaterial_fthgl")
position = Vector2(0, 3)
sprite_frames = SubResource("SpriteFrames_an24v")
animation = &"Idle"

[node name="playerdetection" type="Area2D" parent="." groups=["mob"]]
visible = false
scale = Vector2(2.13034, 0.897092)
collision_layer = 64
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerdetection"]
shape = SubResource("CircleShape2D_afgcd")

[node name="hypnosphere" type="Area2D" parent="." groups=["mob"]]
visible = false
scale = Vector2(0.394784, -0.225166)
collision_layer = 64
collision_mask = 80

[node name="CollisionShape2D" type="CollisionShape2D" parent="hypnosphere"]
shape = SubResource("CircleShape2D_afgcd")

[node name="Attackbox" type="Area2D" parent="." groups=["mob"]]
visible = false
position = Vector2(-1, 17)
collision_layer = 64
collision_mask = 80

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attackbox"]
position = Vector2(-20, -18.5)
shape = SubResource("RectangleShape2D_rxkvq")

[node name="AttackTimer" type="Timer" parent="Attackbox"]
wait_time = 0.5
one_shot = true

[node name="Hitbox" type="Area2D" parent="." groups=["ghost", "mob"]]
visible = false
position = Vector2(1, 11)
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" groups=["ghost", "mob"]]
position = Vector2(-1, -11.5)
shape = SubResource("RectangleShape2D_572kn")

[node name="hp_hitbox" type="Area2D" parent="."]
position = Vector2(-23, -66)
collision_layer = 1024
collision_mask = 1024
script = ExtResource("18_p7arf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hp_hitbox"]
position = Vector2(23, 42)
shape = SubResource("RectangleShape2D_hkjs8")

[node name="hp" type="TextureProgressBar" parent="."]
self_modulate = Color(1, 1, 1, 0.588235)
z_index = 5
offset_left = -23.0
offset_top = -49.0
offset_right = 25.0
offset_bottom = -1.0
max_value = 150.0
step = 0.1
value = 150.0
texture_under = ExtResource("23_ekl8e")
texture_progress = ExtResource("24_w53mp")

[node name="DoTTimer" type="TextureProgressBar" parent="hp"]
layout_mode = 0
offset_left = 38.0
offset_top = 12.0
offset_right = 70.0
offset_bottom = 44.0
scale = Vector2(0.2, 0.2)
value = 100.0
fill_mode = 4
texture_progress = ExtResource("21_ki5do")
texture_progress_offset = Vector2(4, 4)

[node name="Label" type="Label" parent="hp/DoTTimer"]
modulate = Color(1, 1, 1, 0.803922)
layout_mode = 0
offset_left = 10.0
offset_top = -20.0
offset_right = 34.0
offset_bottom = 34.0
theme_override_font_sizes/font_size = 32
text = "1"
horizontal_alignment = 1

[node name="patience" type="TextureProgressBar" parent="."]
self_modulate = Color(1, 1, 1, 0.588235)
z_index = 5
offset_left = -24.0
offset_top = -45.0
offset_right = 24.0
offset_bottom = 3.0
max_value = 80.0
step = 0.1
value = 80.0
texture_under = ExtResource("23_ekl8e")
texture_progress = ExtResource("25_i32xu")

[node name="Head" type="Node2D" parent="."]
position = Vector2(-7, -5)

[node name="SMMain" type="Node2D" parent="."]
script = ExtResource("27_emsoi")

[node name="EnemyStateMachine" type="Node2D" parent="."]
script = ExtResource("22_bgcox")

[node name="Label" type="Label" parent="EnemyStateMachine"]
visible = false
offset_left = -30.0
offset_top = -35.0
offset_right = 31.0
offset_bottom = -10.0
theme_override_font_sizes/font_size = 15
text = "Idle"
horizontal_alignment = 1
script = ExtResource("29_vvbvf")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
navigation_layers = 3

[node name="Timer" type="Timer" parent="NavigationAgent2D"]
wait_time = 0.2
autostart = true

[node name="jumptimer" type="Timer" parent="NavigationAgent2D"]
one_shot = true

[node name="repathtimer" type="Timer" parent="NavigationAgent2D"]
wait_time = 2.2
autostart = true

[node name="webstucktimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="ally_timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="gold" type="AnimatedSprite2D" parent="."]
position = Vector2(35, 1044)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_1o84e")

[node name="Gold" type="Label" parent="."]
offset_left = 10.0
offset_top = 1024.0
offset_right = 58.0
offset_bottom = 1053.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Gold"
horizontal_alignment = 1
script = SubResource("GDScript_nxsfw")
metadata/_edit_use_anchors_ = true

[node name="smoketimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="dot_timer" type="Timer" parent="."]
wait_time = 4.2
one_shot = true

[connection signal="body_entered" from="playerdetection" to="." method="_on_playerdetection_body_entered"]
[connection signal="body_exited" from="playerdetection" to="." method="_on_playerdetection_body_exited"]
[connection signal="body_entered" from="hypnosphere" to="." method="_on_hypnosphere_body_entered"]
[connection signal="body_exited" from="hypnosphere" to="." method="_on_hypnosphere_body_exited"]
[connection signal="body_entered" from="Attackbox" to="." method="_on_attackbox_body_entered"]
[connection signal="timeout" from="Attackbox/AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="area_entered" from="hp_hitbox" to="hp_hitbox" method="_on_area_entered"]
[connection signal="area_exited" from="hp_hitbox" to="hp_hitbox" method="_on_area_exited"]
[connection signal="overlapping" from="hp_hitbox" to="." method="_on_hp_hitbox_overlapping"]
[connection signal="value_changed" from="hp" to="." method="_on_hp_value_changed"]
[connection signal="value_changed" from="patience" to="." method="_on_patience_value_changed"]
[connection signal="timeout" from="NavigationAgent2D/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="NavigationAgent2D/jumptimer" to="." method="_on_jumptimer_timeout"]
[connection signal="timeout" from="NavigationAgent2D/repathtimer" to="." method="_on_repathtimer_timeout"]
[connection signal="timeout" from="webstucktimer" to="." method="_on_webstucktimer_timeout"]
[connection signal="timeout" from="ally_timer" to="." method="_on_ally_timer_timeout"]
